Basic views and services created

--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
+    <li><a href="#!/trip-form">trip-form</a></li>
+    <li><a href="#!/trip-view">trip-view</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -35,8 +35,9 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="trip-form/trip-form.js"></script>
+  <script src="trip-view/trip-view.js"></script>
+  <script src="services/reservationService.js"></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
