--- a/app/index-async.html
+++ b/app/index-async.html
@@ -31,8 +31,8 @@
       'lib/angular/angular.js',
       'lib/angular-route/angular-route.js',
       'app.js',
-      'view1/view1.js',
-      'view2/view2.js',
+      'trip-form/trip-form.js',
+      'trip-view/trip-view.js',
       'core/version/version.js',
       'core/version/version-directive.js',
       'core/version/interpolate-filter.js'
@@ -46,8 +46,8 @@
 </head>
 <body ng-cloak>
   <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
+    <li><a href="#!/trip-form">trip-form</a></li>
+    <li><a href="#!/trip-view">trip-view</a></li>
   </ul>
 
   <div ng-view></div>
