Maps service boilerplate and Information between views done

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
   <script src="trip-form/trip-form.js"></script>
   <script src="trip-view/trip-view.js"></script>
   <script src="services/reservationService.js"></script>
+  <script src="services/mapsService.js"></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
