--- a/app/trip-form/trip-form.html
+++ b/app/trip-form/trip-form.html
@@ -3,19 +3,19 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="exampleInputtext1" placeholder="Reservation Number" ng-model="number">
+                    <input type="text" class="form-control" id="exampleInputtext1" placeholder="Reservation Number" ng-model="reservation.number">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="exampleInputtext1" placeholder="Last Name on Reservation" ng-model="lastName">
+                    <input type="text" class="form-control" id="exampleInputtext1" placeholder="Last Name on Reservation" ng-model="reservation.lastName">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
                 <label>Ship</label>
-                <select class="form-control" ng-model="ship">
+                <select class="form-control" ng-model="reservation.ship">
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -27,7 +27,7 @@
                 <label>Sail date</label>
                 <div class="row">
                     <div class="col-md-4">
-                        <select class="form-control" ng-model="month">
+                        <select class="form-control" ng-model="reservation.month">
                             <option>1</option>
                             <option>2</option>
                             <option>3</option>
@@ -36,7 +36,7 @@
                         </select>
                     </div>
                     <div class="col-md-4">
-                        <select class="form-control" ng-model="day">
+                        <select class="form-control" ng-model="reservation.day">
                             <option>1</option>
                             <option>2</option>
                             <option>3</option>
@@ -45,7 +45,7 @@
                         </select>
                     </div>
                     <div class="col-md-4">
-                        <select class="form-control" ng-model="year">
+                        <select class="form-control" ng-model="reservation.year">
                             <option>1</option>
                             <option>2</option>
                             <option>3</option>
@@ -57,11 +57,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <label>
-                    <input type="checkbox" ng-model="remember"> Check me out
+            <label>Destination Address:</label>
+            <div class="col-md-12">
+                <textarea class="form-control" rows="2" ng-model="reservation.address"></textarea>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4" align="center">
+                <label class="full-width text-center">
+                    <input type="checkbox" ng-model="reservation.remember"> Remember my information
                 </label>
-                <button type="submit" class="btn btn-primary">Primary</button>
+                <button type="submit" class="btn btn-primary text-center">Find Reservation</button>
             </div>
         </div>
     </form>
